--- a/games.html
+++ b/games.html
@@ -26,12 +26,12 @@
         <a href="midterm.html">Content</a>
       </div>
       <ul class="navbar_menu">
-        <li><a href="midterm.html">Introduction</a></li>
-        <li><a href="midterm.html">Rules</a></li>
-        <li><a href="midterm.html">History</a></li>
-        <li><a href="midterm.html">Teams</a></li>
+        <li><a href="index.html">Introduction</a></li>
+        <li><a href="index.html">Rules</a></li>
+        <li><a href="index.html">History</a></li>
+        <li><a href="index.html">Teams</a></li>
         <li><a href="games.html">Games</a></li>
-        <li><a href="midterm.html">About Us</a></li>
+        <li><a href="index.html">About Us</a></li>
       </ul>
       <ul class="navbar_links">
       </ul>
