--- a/games.html
+++ b/games.html
@@ -23,7 +23,7 @@
     <nav class="navbar">
       <div class="navbar_logo">
         <i class="fas fa-football-ball"></i>
-        <a href="midterm.html">Content</a>
+        <a href="index.html">Content</a>
       </div>
       <ul class="navbar_menu">
         <li><a href="index.html">Introduction</a></li>
